objects/RFQ_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_s_Submission_Date__c</fullName>
        <inlineHelpText>The date the customer formally ask for an RFQ. Must provide specific requirements and details for a quotation.</inlineHelpText>
        <label>1. Customer&apos;s Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Customer_Submission_to_Prep__c</fullName>
        <formula>IF (ISBLANK(Preparation_for_Pricing_Date__c) , 0, (Preparation_for_Pricing_Date__c -  Customer_s_Submission_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days between Customer RFQ submission and preparation for pricing started</inlineHelpText>
        <label>Days - Customer Submission to Prep</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Preparation_to_Submit_for_Pricing__c</fullName>
        <formula>IF (ISBLANK( Submit_for_Pricing_Date__c ) , 0, (Submit_for_Pricing_Date__c -  Preparation_for_Pricing_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days from Preparation for Pricing to Submitting for Pricing</inlineHelpText>
        <label>Days - Preparation to Submit for Pricing</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Pricing_Approval_to_Quote_Sent__c</fullName>
        <formula>IF (ISBLANK( Quote_Sent_to_Customer_Date__c ) , 0, (  Quote_Sent_to_Customer_Date__c  -  Pricing_Approval_Date__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days from Pricing Approval to Quote Sent to Customer.</inlineHelpText>
        <label>Days - Pricing Approval to Quote Sent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Remaining_to_Send_Quote__c</fullName>
        <formula>IF  (ISPICKVAL( Stage__c , &quot;5. Quote Sent to Customer&quot;)  || ISPICKVAL( Stage__c , &quot;RFQ Cancelled&quot;)  || ISPICKVAL (Stage__c, &quot;No Bid&quot;), 0,  Quote_Needed_by_Date__c - NOW() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining to Send Quote</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Submit_for_Pricing_to_Price_Appro__c</fullName>
        <formula>IF (ISBLANK(Pricing_Approval_Date__c ) , 0, (  Pricing_Approval_Date__c -  Submit_for_Pricing_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days from Submit for Pricing to Pricing Approval</inlineHelpText>
        <label>Days - Submit for Pricing to Price Appro</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Preparation_for_Pricing__c</fullName>
        <formula>Preparation_for_Pricing_Date__c -  Customer_s_Submission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days from Customer Submission to Preparation</inlineHelpText>
        <label>Days to Preparation for Pricing</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Pricing_Approval__c</fullName>
        <formula>Pricing_Approval_Date__c -  Customer_s_Submission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days from Customer&apos;s Submission Date to Pricing Approval</inlineHelpText>
        <label>Days to Pricing Approval</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Quote_Sent__c</fullName>
        <formula>Quote_Sent_to_Customer_Date__c - Customer_s_Submission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days starting from Customer Submission Date to when the quote was sent to customer.</inlineHelpText>
        <label>Days to Quote Sent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Submit_for_Pricing__c</fullName>
        <formula>Submit_for_Pricing_Date__c  - Customer_s_Submission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days from Customer&apos;s Submission Date to Submit for Pricing</inlineHelpText>
        <label>Days to Submit for Pricing</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <inlineHelpText>RFQ Tracker for the Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RFQ Trackers</relationshipLabel>
        <relationshipName>RFQ_Trackers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Preparation_for_Pricing_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <inlineHelpText>When did you start preparation for pricing?</inlineHelpText>
        <label>2. Preparation for Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pricing_Approval_Date__c</fullName>
        <inlineHelpText>Date that pricing has approved the IQ or Quote</inlineHelpText>
        <label>4. Pricing Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Needed_by_Date__c</fullName>
        <inlineHelpText>The date the customer requires the quote</inlineHelpText>
        <label>Quote Needed by Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Sent_to_Customer_Date__c</fullName>
        <inlineHelpText>Date that the quotation was sent to the customer.</inlineHelpText>
        <label>5. Quote Sent to Customer Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RFQ_Tracker_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Point of contact for this RFQ Tracker. Default is the Opportunity AM.</inlineHelpText>
        <label>RFQ Tracker POC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard, Partner</value>
            </filterItems>
            <infoMessage>Only internal users can be assigned as the RFQ Tracker POC.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>RFQ_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>Stage of the RFQ Response</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Customer&apos;s Submission</fullName>
                    <default>true</default>
                    <label>1. Customer&apos;s Submission</label>
                </value>
                <value>
                    <fullName>2. Preparation for Pricing</fullName>
                </value>
                <value>
                    <fullName>3. Submit for Pricing</fullName>
                </value>
                <value>
                    <fullName>4. Pricing Approved</fullName>
                </value>
                <value>
                    <fullName>5. Quote Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>RFQ Cancelled</fullName>
                </value>
                <value>
                    <fullName>No Bid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_GUI__c</fullName>
        <formula>IF ( ISPICKVAL(Stage__c, &quot;RFQ Cancelled&quot;)  ||  ISPICKVAL(Stage__c, &quot;No Bid&quot;), Image(&quot;resource/RFQ_Tracker_Gray&quot;,&quot;&quot;,25,40),
IF ( NOT( ISBLANK( Quote_Sent_to_Customer_Date__c )), 
     Image (&quot;resource/RFQ_Tracker_blue&quot;,&quot;&quot;,25,40),
IF (Days_Remaining_to_Send_Quote__c &gt;= 3, 
     Image (&quot;resource/RFQ_Tracker_green&quot;,&quot;&quot;,25,40),
IF ((Days_Remaining_to_Send_Quote__c &lt; 3) &amp;&amp; (Days_Remaining_to_Send_Quote__c &gt; 0), 
     Image (&quot;resource/RFQ_Tracker_yellow&quot;,&quot;&quot;,25,40), 
     Image (&quot;resource/RFQ_Tracker_red&quot;,&quot;&quot;,25,40)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status GUI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_for_Pricing_Date__c</fullName>
        <inlineHelpText>Date that the Account Manager submits for Informal Quote or Quotation.</inlineHelpText>
        <label>3. Submit for Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <label>RFQ Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RFQT-{00000}</displayFormat>
        <label>RFQ Tracker Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFQ Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>